# ncs-example-application

./: .gitignore
app/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  prj.conf
app/dsp/: dsp.m  iir_coeffs_cmsis.m
app/python_data_recoder/: data_analysis.py  plot_record.py  subplot_record  subplot_record.py  test.csv  test2.csv
app/src/: MAX30101.cpp  MAX30101.hpp  main.c  main.cpp
